# open-universe

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py  train.py
config/: config.yaml
config/datamodule/: default.yaml
config/experiment/: default.yaml  universe_original_vb_16k.yaml  universepp_24k_lora_finetune.yaml  universepp_lora_finetune.yaml  universepp_vb_16k.yaml  universepp_vb_24k.yaml
config/model/: default.yaml  universe_lora.yaml  universe_original.yaml  universepp_24k.yaml
config/trainer/: default.yaml
data/: prepare_voicebank_demand.sh
open_universe/: __init__.py
open_universe/datasets/: __init__.py  datamodule.py  static_dataset.py
open_universe/inference_utils/: __init__.py  model_loader.py  signature_to_parser.py
open_universe/layers/: dyn_range_comp.py
open_universe/lora/: __init__.py  lora.py  utils.py
open_universe/losses/: __init__.py  combine.py  multires_stft.py  phoneme_loss.py
open_universe/metrics/: __init__.py  eval.py  lps.py  lsd.py  pesq.py  wer.py  wrapper.py
open_universe/metrics/dnsmos/: __init__.py  dnsmos.py  dnsmos_local.py
open_universe/metrics/plcmos/: README.md  __init__.py  plc_mos.py
open_universe/networks/bigvgan/: __init__.py  alias_free_act.py  gan.py  snake.py
open_universe/networks/enhancement/: __init__.py  base.py
open_universe/networks/universe/: mdn.py  (+9 more)
open_universe/prepare/: resample.py
open_universe/utils/: __init__.py  autoclip_module.py  ddp.py  norm.py  random.py  schedulers.py  stats.py  torch_utils.py
